--- a/config/cobbler/settings.yaml
+++ b/config/cobbler/settings.yaml
@@ -223,7 +223,7 @@ default_virt_type: xenpv
 # and if a profile/system is configured to boot via iPXE it will
 # chain load off pxelinux.0.
 # Default: false
-enable_ipxe: false
+enable_ipxe: true
 
 # controls whether Cobbler will add each new profile entry to the default
 # PXE boot menu.  This can be over-ridden on a per-profile
@@ -324,7 +324,7 @@ manage_dhcp_v4: false
 # if using Cobbler with manage_dhcp, put the IP address
 # of the Cobbler server here so that PXE booting guests can find it
 # if you do not set this correctly, this will be manifested in TFTP open timeouts.
-next_server_v4: 127.0.0.1
+next_server_v4: osp.scc.local
 
 # And the same if you set manage_dhcp_v6 to true.
 # Set the cobbler IPv6 address here so that PXE booting guests can find it
@@ -359,7 +359,7 @@ manage_tftpd: true
 # This variable contains the location of the tftpboot directory. If this directory is not present Cobbler does not
 # start.
 # Default: @@tftproot@@
-tftpboot_location: "@@tftproot@@"
+tftpboot_location: "/var/lib/tftpboot"
 
 # set to true to enable Cobbler's RSYNC management features.
 manage_rsync: false
@@ -460,7 +460,7 @@ scm_push_script: "/bin/true"
 # if you have a server that appears differently to different subnets
 # (dual homed, etc), you need to read the --server-override section
 # of the manpage for how that works.
-server: 127.0.0.1
+server: osp.scc.local
 
 # If set to true, all commands will be forced to use the localhost address
 # instead of using the above value which can force commands like
@@ -478,7 +478,7 @@ virt_auto_boot: true
 
 # Cobbler's web directory. Don't change this setting -- see the Wiki on "Relocating your Cobbler install" if your "/var"
 # partition is not large enough.
-webdir: "@@webroot@@/cobbler"
+webdir: "/var/www/cobbler"
 
 # Directories that will not get wiped and recreated on a "cobbler sync".
 webdir_whitelist:
